--- a/Css/style.css
+++ b/Css/style.css
@@ -18,6 +18,7 @@
 }
 body{
     background-image: url(../imagenes/laptop-g5e84b279a_1920.jpg);
+    overflow: hidden;
 }
 .container{
     
@@ -117,6 +118,7 @@ body{
     height: 600PX;
     display: flex;
     align-items: center;
+    justify-content: center;
     padding: 0;
     
 
@@ -129,7 +131,11 @@ li{
 }
 
 .hero_textos{
+    text-align: center;
     width: 80%;
+    background-color: rgba(0, 0, 0, 0.685);
+    padding: 20px;
+    border-radius: 10px;
 }
 
 .title_active{
