--- a/Css/style.css
+++ b/Css/style.css
@@ -18,6 +18,7 @@
 }
 body{
     background-image: url(../imagenes/laptop-g5e84b279a_1920.jpg);
+    background-repeat: no-repeat;
 }
 .container{
     
