--- a/Css/style1.css
+++ b/Css/style1.css
@@ -1,14 +1,15 @@
-:root {
-  --gold: #f4bd76;
-  --gold2: #f6cd8f;
-  --gray: #ffffff80;
-  --gray2: #f7d9d990;
-  --black1: #1a1b1f;
-  --black2: #30553b;
-  --shadow: 0 8px 8px;
-  --color_shadow: #00000033;
-}
+:root{
+    --gold:#f4bd76;
+    --gold2: #f6cd8f;
+    --gray: #ffffff80;
+    --gray2: #f7d9d990;
+    --black1: #1a1b1f;
+    --black2: #30553b;
+    --shadow: 0 8px 8px;
+    --color_shadow:#00000033;
 
+
+}
 
 *{
     margin: 0;
@@ -34,155 +35,149 @@ body{
 .container--modifer{
     width: 60%;
 
+}
+.hero{
+    width: 100%;
+    min-height: 100vh;
+    /*background: linear-gradient(180deg,#30353b 0%,#1a1b1f 100%);*/
+    
+}
+.nav_hero{
+    background-color: rgb(12, 12, 12,0.8);
+    color: #fff;
+    height: 70px;
+    border-bottom:1px solid rgba(255,255,255,0.9);
 
 }
-.hero {
-  width: 100%;
-  min-height: 100vh;
-  /*background: linear-gradient(180deg,#30353b 0%,#1a1b1f 100%);*/
+.nav_container{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        height: inherit;
+        padding: 0;
 }
-.nav_hero {
-  background-color: rgb(12, 12, 12, 0.8);
-  color: #fff;
-  height: 70px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.9);
+.logo{
+    display: flex;
+    align-items: center;
+    
 }
-.nav_container {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  height: inherit;
-  padding: 0;
-}
-.logo {
-  display: flex;
-  align-items: center;
-}
-.logo_name {
-  margin-left: 15px;
-  color: #fff;
-  font-size: 20px;
+.logo_name{
+    margin-left: 15px;
+    color: #fff;
+    font-size: 20px;
 
 }
 
-.link {
-  display: inline-block;
-  color: #fff;
-  text-decoration: none;
-  font-weight: 300;
-  padding: 10px;
-  font-size: 18px;
+.link{
+    display: inline-block;
+    color: #FFF;
+    text-decoration: none;
+    font-weight: 300;
+    padding: 10px;
+    font-size:18px;
+
 }
-.link--active {
-  color: #000;
-  font-weight: 700;
+.link--active{
+    color:#000;
+    font-weight: 700;
 }
-.point {
-  color: var(--gold);
+.point{
+    color: var(--gold);
 }
-.menu_container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: inherit;
-  padding: 0;
+.menu_container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: inherit;
+    padding: 0;
 }
 
-.menu {
-  background-color: rgb(12, 12, 12, 0.8);
-  color: #fff;
-  height: 70px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.8);
+.menu{
+    
+    background-color: rgb(12, 12, 12,0.8);
+    color: #fff;
+    height: 70px;
+    border-bottom:1px solid rgba(255,255,255,0.8);
+    
+    
 }
-.menus {
-  width: 100%;
-  text-align: center;
+.menus{
+    width: 100%;
+    text-align: center;
 }
-.lmenu {
-  background-color: rgba(54, 53, 53, 0.5);
-  display: inline-block;
-  color: #fff;
-  text-decoration: none;
-  font-weight: 300;
-  padding: 10px;
-  font-size: 21px;
-  box-shadow: var(--shadow) var(--color_shadow);
-  border-radius: 6px;
-  width: 195px;
+.lmenu{
+    background-color: rgba(54, 53, 53, 0.5);
+    display: inline-block;
+    color: #FFF;
+    text-decoration: none;
+    font-weight: 300;
+    padding: 10px;
+    font-size:21px;
+    box-shadow: var(--shadow) var(--color_shadow);
+    border-radius: 6px; 
+    width: 195px;
 }
-.hero_main {
-  height: 600px;
-  display: flex;
-  align-items: center;
-  padding: 0;
+.hero_main{
+    height: 600PX;
+    display: flex;
+    align-items: center;
+    padding: 0;
+    
+
+
 }
-li {
-  margin-top: 5px;
-  display: inline;
+li{
+        
+    margin-top: 5px;
+    display: inline;
 }
 
-.hero_textos {
-  width: 80%;
+.hero_textos{
+    width: 80%;
 }
 
-.title_active {
-  color: rgb(248, 247, 247);
-  font-weight: 700;
-  font-size: 100px;
+.title_active{
+    color: rgb(248, 247, 247);
+    font-weight: 700;
+    font-size: 100px;
 }
-.registro {
-  width: 1300px;
-  height: 650px;
-  background-color: rgba(94, 91, 91, 0.5);
-  padding: 5px;
-  margin: auto;
-  margin-top: 18px;
-  border-radius: 4px;
-  font-family: "calibri";
-  color: rgb(241, 227, 227);
-  box-shadow: 7px 13px 37px #000;
-  display: flex;
+.registro{
+    width: 1300px;
+    height: 650px;
+    background-color: rgba(94, 91, 91, 0.5);
+    padding: 5px;
+    margin: auto;
+    margin-top: 18px;
+    border-radius: 4px;
+    font-family: 'calibri';
+    color: rgb(241, 227, 227);
+    box-shadow: 7px 13px 37px #000;
+    display: flex;
+    
 }
-.caja1 {
-  padding: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-
-h4 {
-  margin-top: 20px;
-  color: #fff;
-  text-align: center;
-  font-size: 50px;
-  margin-bottom: 20px;
-}
-.registro p {
-  font-size: 20px;
-  line-height: 30px;
-  text-align: justify;
-}
-h3 {
-  margin-left: 150px;
-  font-size: 35px;
-  line-height: 40px;
+.caja1{
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items:center;
+    
 }
 
-.ejemplo{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.ejemplo h3{
-  padding: 20px;
-}
-.ejemplo a{
-  color: #fff;
-}
+h4{
+    margin-top: 20px;
+    color: #fff;
+    text-align: center;
+    font-size: 50px;
+    margin-bottom: 20px;
 
-.video {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+}
+.registro p{
+    font-size: 20px;
+    line-height: 30px;
+    text-align: justify;
+}
+h3{
+    margin-left: 150px;
+    font-size: 35px;
+    line-height: 40px;
 }
